--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: Gradle@3
   inputs:
     workingDirectory: '$(Build.SourcesDirectory)/azdemo'
-    gradleWrapperFile: 'gradlew'
+    gradleWrapperFile: '$(Build.SourcesDirectory)/azdemo/gradlew'
     gradleOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.17'
