--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,12 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)/azdemo/build' 
+    Contents: '*.jar'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+    OverWrite: true
 
+- publish: '$(Build.ArtifactStagingDirectory)' 
+  artifact: WebApp
