--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,5 +46,5 @@ steps:
     WebAppName: 'azdemo001'
     packageForLinux: '$(System.ArtifactsDirectory)/**/*-SNAPSHOT.jar'
     RuntimeStack: 'JAVA|17-java17'
-    StartupCommand: 'java - jar $(System.ArtifactsDirectory)/drop/WebApp/azdemo-0.0.1-SNAPSHOT.jar'
+    StartupCommand: 'java - jar $(System.ArtifactsDirectory)/WebApp/azdemo-0.0.1-SNAPSHOT.jar'
     
