--- a/azdemo/src/main/resources/application.properties
+++ b/azdemo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=azdemo
+# server.port=8080
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
 
-blog.title=Blog
+blog.title=Brand New Blog!!
 blog.banner.title=Warning
 blog.banner.content=The blog will be down tomorrow.
